# launchctl-dumpstate-json

./: LICENSE  README.md  pyproject.toml
src/ldumpj/: __init__.py  ldumpj.py
test/: ipadOS18.txt
