[project]
name = "ldumpj"
version = "0.1.0"
description = "Parses the output of launchctl dumpstate and print into a json"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Lukas Boschanski", email = "ipadspass@tuta.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2",
]

[project.scripts]
ldumpj = "ldumpj.__init__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/bluuuk/launchctl-dumpstate-json"
Issues = "https://github.com/bluuuk/launchctl-dumpstate-json/issues"
